sql/sql_select.cc
@@ -17901,8 +17901,8 @@ uint JOIN_CACHE::write_record_data(uchar * link, bool *is_full)
 
   /* Make an adjustment for the size of the auxiliary buffer if there is any */
   uint incr= aux_buffer_incr();
-  if (len+incr < rem_space())
-    aux_buff_size+= incr;  
+  ulong rem= rem_space();
+  aux_buff_size+= len+incr < rem ? incr : rem;
 
   /*
     For each blob to be put into cache save its length and a pointer
